--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.13",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "fuse.js": "^7.1.0",
     "tailwindcss": "^4.1.18"
   }
 }
